--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -22,5 +22,15 @@
     "32": "icon32.png",
     "48": "icon48.png",
     "128": "icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "temle-search@robrich.org",
+      "strict_min_version": "109.0"
+    },
+    "safari": {
+      "strict_min_version": "15.4",
+      "strict_max_version": "*"
+    }
   }
 }
